--- a/index.html
+++ b/index.html
@@ -7197,10 +7197,33 @@
         }
       });
 
-      // Update preferred_language hidden field
+      // Update preferred_language hidden field with FULL language name (not code)
       const preferredLangField = document.getElementById('preferred_language');
       if (preferredLangField) {
-        preferredLangField.value = lang;
+        // Map language codes to full names for better readability in emails/reports
+        const languageNames = {
+          'en': 'English',
+          'es': 'Spanish',
+          'zh': 'Chinese',
+          'ar': 'Arabic',
+          'pt': 'Portuguese',
+          'fr': 'French',
+          'de': 'German',
+          'it': 'Italian',
+          'ru': 'Russian',
+          'ja': 'Japanese',
+          'ko': 'Korean',
+          'hi': 'Hindi',
+          'vi': 'Vietnamese',
+          'tl': 'Tagalog',
+          'pl': 'Polish',
+          'uk': 'Ukrainian',
+          'he': 'Hebrew',
+          'tr': 'Turkish',
+          'nl': 'Dutch',
+          'sv': 'Swedish'
+        };
+        preferredLangField.value = languageNames[lang] || lang;
       }
 
       // Update HTML lang attribute
@@ -8290,84 +8313,10 @@
       }
 
       // Geo-detection function (make it globally accessible)
+      // Priority: IP geolocation (accurate city) > Timezone (fallback) > Config default
       window.detectUserGeo = async function detectUserGeo() {
         return new Promise(async (resolve, reject) => {
-          // Method 1: Try timezone-based detection first (no permission needed)
-          try {
-            const timezone = Intl.DateTimeFormat().resolvedOptions().timeZone;
-            // Map timezones to city, state
-            const timezoneMap = {
-              'America/New_York': { city: 'New York', state: 'NY' },
-              'America/Chicago': { city: 'Chicago', state: 'IL' },
-              'America/Denver': { city: 'Denver', state: 'CO' },
-              'America/Phoenix': { city: 'Phoenix', state: 'AZ' },
-              'America/Los_Angeles': { city: 'Los Angeles', state: 'CA' },
-              'America/Detroit': { city: 'Detroit', state: 'MI' },
-              'America/Indiana/Indianapolis': { city: 'Indianapolis', state: 'IN' },
-              'America/Indiana/Vevay': { city: 'Indianapolis', state: 'IN' },
-              'America/Indiana/Vincennes': { city: 'Indianapolis', state: 'IN' },
-              'America/Indiana/Winamac': { city: 'Indianapolis', state: 'IN' },
-              'America/Kentucky/Louisville': { city: 'Louisville', state: 'KY' },
-              'America/Kentucky/Monticello': { city: 'Louisville', state: 'KY' },
-              'America/Nashville': { city: 'Nashville', state: 'TN' },
-              'America/Boise': { city: 'Boise', state: 'ID' },
-              'America/Anchorage': { city: 'Anchorage', state: 'AK' },
-              'America/Honolulu': { city: 'Honolulu', state: 'HI' },
-              'America/Menominee': { city: 'Menominee', state: 'WI' },
-              'America/Adak': { city: 'Adak', state: 'AK' },
-              'America/Metlakatla': { city: 'Metlakatla', state: 'AK' },
-              'America/Sitka': { city: 'Sitka', state: 'AK' },
-              'America/Juneau': { city: 'Juneau', state: 'AK' },
-              'America/Yakutat': { city: 'Yakutat', state: 'AK' },
-              'America/Nome': { city: 'Nome', state: 'AK' },
-              'America/Atka': { city: 'Atka', state: 'AK' }
-            };
-
-            // Check direct timezone mapping first
-            if (timezoneMap[timezone]) {
-              const location = timezoneMap[timezone];
-              resolve(`${location.city}, ${location.state}`);
-              return;
-            }
-
-            // Extract city from timezone string as fallback
-            const cityMatch = timezone.match(/\/([^/]+)$/);
-            if (cityMatch) {
-              const city = cityMatch[1].replace(/_/g, ' ');
-              // Common timezone to state mappings
-              const cityToState = {
-                'New York': 'NY',
-                'Los Angeles': 'CA',
-                'Chicago': 'IL',
-                'Denver': 'CO',
-                'Phoenix': 'AZ',
-                'Miami': 'FL',
-                'Dallas': 'TX',
-                'Houston': 'TX',
-                'Seattle': 'WA',
-                'Portland': 'OR',
-                'Boston': 'MA',
-                'Detroit': 'MI',
-                'Atlanta': 'GA',
-                'Minneapolis': 'MN',
-                'Kansas City': 'MO',
-                'Indianapolis': 'IN',
-                'Nashville': 'TN',
-                'Charlotte': 'NC',
-                'Tampa': 'FL',
-                'Orlando': 'FL',
-                'Jacksonville': 'FL'
-              };
-              const state = cityToState[city] || '';
-              const geoString = state ? `${city}, ${state}` : city;
-              resolve(geoString);
-              return;
-            }
-          } catch (error) {
-            // Continue to next method
-          }
-
-          // Method 2: Try IP-based geolocation (no permission needed)
+          // Method 1: Try IP-based geolocation FIRST (most accurate for actual city)
           try {
             // Try ipapi.co first (free, no API key needed)
             const response = await fetch('https://ipapi.co/json/', {
@@ -8380,40 +8329,115 @@
               const data = await response.json();
               if (data.city && data.region_code) {
                 const geoString = `${data.city}, ${data.region_code}`;
+                console.log('✓ Geo detected via ipapi.co:', geoString);
                 resolve(geoString);
                 return;
               } else if (data.city) {
+                console.log('✓ Geo detected via ipapi.co (city only):', data.city);
                 resolve(data.city);
                 return;
               }
             }
           } catch (error) {
-            // Try alternative IP geolocation service as backup
-            try {
-              const backupResponse = await fetch('https://ip-api.com/json/?fields=city,regionCode', {
-                headers: {
-                  'Accept': 'application/json'
-                }
-              });
-
-              if (backupResponse.ok) {
-                const backupData = await backupResponse.json();
-                if (backupData.city && backupData.regionCode) {
-                  const geoString = `${backupData.city}, ${backupData.regionCode}`;
-                  resolve(geoString);
-                  return;
-                } else if (backupData.city) {
-                  resolve(backupData.city);
-                  return;
-                }
-              }
-            } catch (backupError) {
-              // Continue to fallback
-            }
+            console.log('ipapi.co failed, trying backup...');
           }
 
-          // Method 3: Fallback to default from config
+          // Method 2: Try backup IP geolocation service
+          try {
+            const backupResponse = await fetch('https://ip-api.com/json/?fields=city,regionCode', {
+              headers: {
+                'Accept': 'application/json'
+              }
+            });
+
+            if (backupResponse.ok) {
+              const backupData = await backupResponse.json();
+              if (backupData.city && backupData.regionCode) {
+                const geoString = `${backupData.city}, ${backupData.regionCode}`;
+                console.log('✓ Geo detected via ip-api.com:', geoString);
+                resolve(geoString);
+                return;
+              } else if (backupData.city) {
+                console.log('✓ Geo detected via ip-api.com (city only):', backupData.city);
+                resolve(backupData.city);
+                return;
+              }
+            }
+          } catch (backupError) {
+            console.log('ip-api.com also failed, falling back to timezone...');
+          }
+
+          // Method 3: Timezone-based detection as FALLBACK (less accurate but works offline)
+          try {
+            const timezone = Intl.DateTimeFormat().resolvedOptions().timeZone;
+            // Only use specific city timezones (not broad regional ones like America/New_York)
+            const timezoneMap = {
+              'America/Detroit': { city: 'Detroit', state: 'MI' },
+              'America/Indiana/Indianapolis': { city: 'Indianapolis', state: 'IN' },
+              'America/Indiana/Vevay': { city: 'Indianapolis', state: 'IN' },
+              'America/Indiana/Vincennes': { city: 'Indianapolis', state: 'IN' },
+              'America/Indiana/Winamac': { city: 'Indianapolis', state: 'IN' },
+              'America/Kentucky/Louisville': { city: 'Louisville', state: 'KY' },
+              'America/Kentucky/Monticello': { city: 'Louisville', state: 'KY' },
+              'America/Boise': { city: 'Boise', state: 'ID' },
+              'America/Anchorage': { city: 'Anchorage', state: 'AK' },
+              'America/Honolulu': { city: 'Honolulu', state: 'HI' },
+              'America/Menominee': { city: 'Menominee', state: 'WI' },
+              'America/Adak': { city: 'Adak', state: 'AK' },
+              'America/Metlakatla': { city: 'Metlakatla', state: 'AK' },
+              'America/Sitka': { city: 'Sitka', state: 'AK' },
+              'America/Juneau': { city: 'Juneau', state: 'AK' },
+              'America/Yakutat': { city: 'Yakutat', state: 'AK' },
+              'America/Nome': { city: 'Nome', state: 'AK' },
+              'America/Atka': { city: 'Atka', state: 'AK' }
+              // NOTE: Removed broad timezones like America/New_York, America/Chicago, etc.
+              // These cover entire regions and are not accurate for specific city detection
+            };
+
+            // Check direct timezone mapping (only for specific city timezones)
+            if (timezoneMap[timezone]) {
+              const location = timezoneMap[timezone];
+              const geoString = `${location.city}, ${location.state}`;
+              console.log('✓ Geo detected via timezone:', geoString);
+              resolve(geoString);
+              return;
+            }
+
+            // Extract city from timezone string if it's a specific city timezone
+            const cityMatch = timezone.match(/\/([^/]+)$/);
+            if (cityMatch) {
+              const city = cityMatch[1].replace(/_/g, ' ');
+              // Only use if it's a specific Florida city or other recognizable city
+              const cityToState = {
+                'Miami': 'FL',
+                'Tampa': 'FL',
+                'Orlando': 'FL',
+                'Jacksonville': 'FL',
+                'Dallas': 'TX',
+                'Houston': 'TX',
+                'Seattle': 'WA',
+                'Portland': 'OR',
+                'Boston': 'MA',
+                'Atlanta': 'GA',
+                'Minneapolis': 'MN',
+                'Kansas City': 'MO',
+                'Nashville': 'TN',
+                'Charlotte': 'NC'
+              };
+              if (cityToState[city]) {
+                const geoString = `${city}, ${cityToState[city]}`;
+                console.log('✓ Geo detected via timezone city:', geoString);
+                resolve(geoString);
+                return;
+              }
+            }
+          } catch (error) {
+            console.log('Timezone detection failed');
+          }
+
+          // Method 4: Fallback to default from config
           if (typeof SITE_CONFIG !== 'undefined' && SITE_CONFIG.geo.defaultCity) {
+            console.log('✓ Using default geo from config:', SITE_CONFIG.geo.defaultCity);
             resolve(SITE_CONFIG.geo.defaultCity);
             return;
           }
